--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -29,7 +29,8 @@ under the License.
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title><%= current_page.data.title || "API Documentation" %></title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <title><%= current_page.data.title || "Slide API Documentation" %></title>
 
     <style>
       <%= Rouge::Themes::MonokaiSublime.render(:scope => '.highlight') %>
@@ -46,12 +47,15 @@ under the License.
   <body class="<%= page_classes %>" data-languages="<%=h language_tabs.map{ |lang| lang.is_a?(Hash) ? lang.keys.first : lang }.to_json %>">
     <a href="#" id="nav-button">
       <span>
-        NAV
-        <%= image_tag('navbar.png') %>
+        <!-- NAV -->
+        <!-- <%= image_tag('navbar.png') %> -->
+        <i class="fa fa-bars"></i>
       </span>
     </a>
     <div class="toc-wrapper">
+      <a href="https://getslideapp.com" target="_blank">
       <%= image_tag "logo.png", class: 'logo' %>
+    </a>
       <% if language_tabs.any? %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
