--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -76,6 +76,7 @@ html, body {
     display: block;
     max-width: 100%;
     margin-bottom: $logo-margin;
+    background: $logo-bg;
   }
 
   &>.search {
@@ -215,10 +216,11 @@ html, body {
     display: block;
     $side-pad: $main-padding / 2 - 8px;
     padding: $side-pad $side-pad $side-pad;
-    background-color: rgba($main-bg, 0.7);
+    background-color: $nav-button-bg;
     transform-origin: 0 0;
-    transform: rotate(-90deg) translate(-100%, 0);
-    border-radius: 0 0 0 5px;
+    // transform: rotate(-90deg) translate(-100%, 0);
+    border-radius: 0 5px 5px 0;
+    margin-top: 5px;
   }
   padding: 0 1.5em 5em 0; // increase touch size area
   display: none;
@@ -226,10 +228,10 @@ html, body {
   top: 0;
   left: 0;
   z-index: 100;
-  color: #000;
+  color: $nav-text;
   text-decoration: none;
   font-weight: bold;
-  opacity: 0.7;
+  opacity: 1;
   line-height: 16px;
   img {
     height: 16px;
@@ -273,7 +275,9 @@ html, body {
   .lang-selector {
     position: fixed;
     z-index: 50;
-    border-bottom: 5px solid $lang-select-active-bg;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    // border-bottom: 5px solid $lang-select-active-bg;
   }
 }
 
