--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -32,10 +32,10 @@ $code-annotation-bg: #191D1F !default;
 $nav-subitem-bg: #1E2224 !default;
 $nav-active-bg: #4286F4 !default;
 $nav-active-parent-bg: #1E2224 !default; // parent links of the current section
-$lang-select-border: #000 !default;
-$lang-select-bg: #1E2224 !default;
-$lang-select-active-bg: #4286F4 !default; // feel free to change this to blue or something
-$lang-select-pressed-bg: #111 !default; // color of language tab bg when mouse is pressed
+$lang-select-border: #4286F4 !default;
+$lang-select-bg: #4286F4 !default;
+$lang-select-active-bg: #fff !default; // feel free to change this to blue or something
+$lang-select-pressed-bg: #346bc3 !default; // color of language tab bg when mouse is pressed
 $main-bg: #F6F6F6 !default;
 $aside-notice-bg: #8fbcd4 !default;
 $aside-warning-bg: #c97a7e !default;
@@ -50,7 +50,7 @@ $nav-text: #fff !default;
 $nav-active-text: #fff !default;
 $nav-active-parent-text: #fff !default; // parent links of the current section
 $lang-select-text: #fff !default; // color of unselected language tab text
-$lang-select-active-text: #fff !default; // color of selected language tab text
+$lang-select-active-text: #4286F4 !default; // color of selected language tab text
 $lang-select-pressed-text: #fff !default; // color of language tab text when mouse is pressed
 
 
