Updating button padding

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -275,9 +275,10 @@ html, body {
   .lang-selector {
     position: fixed;
     z-index: 50;
-    padding: 5px;
-    // padding-top: 5px;
-    // left: 5px;
+    // padding: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 28px;
     // border-bottom: 5px solid $lang-select-active-bg;
   }
 }
