--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -42,8 +42,8 @@ under the License.
     <% else %>
       <%= javascript_include_tag  "all_nosearch" %>
     <% end %>
+    <%= favicon_tag 'images/favicon.png' %>
   </head>
-
   <body class="<%= page_classes %>" data-languages="<%=h language_tabs.map{ |lang| lang.is_a?(Hash) ? lang.keys.first : lang }.to_json %>">
     <a href="#" id="nav-button">
       <span>
