Updating menu to be lighter colour scheme

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -54,7 +54,7 @@ under the License.
     </a>
     <div class="toc-wrapper">
       <a href="https://getslideapp.com" target="_blank">
-      <%= image_tag "logo.png", class: 'logo' %>
+      <%= image_tag "logo_blue.png", class: 'logo' %>
     </a>
       <% if language_tabs.any? %>
         <div class="lang-selector">
