reversing menu colours

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -23,13 +23,13 @@ under the License.
 
 // BACKGROUND COLORS
 ////////////////////
-$nav-bg: #F6F6F6 !default;
+$nav-bg: #fdfdfd !default;
 $nav-button-bg: #4286F4 !default;
-$logo-bg: #F6F6F6 !default;
+$logo-bg: #fdfdfd !default;
 $examples-bg: #2E3336 !default;
 $code-bg: #1E2224 !default;
 $code-annotation-bg: #191D1F !default;
-$nav-subitem-bg: #fdfdfd !default;
+$nav-subitem-bg: #F6F6F6 !default;
 $nav-active-bg: #4286F4 !default;
 $nav-active-parent-bg: #4286F4 !default; // parent links of the current section
 $lang-select-border: #4286F4 !default;
